@@ -1,3 +1,10 @@
+2008-07-09  Thorsten Kukuk  <kukuk@thkukuk.de>
+
+	* modules/pam_tally/pam_tally.c: Add support for silent and
+	no_log_info options.
+	* modules/pam_tally/pam_tally.8.xml: Document silent and
+	no_log_info options.
+
 2008-07-08  Thorsten Kukuk  <kukuk@thkukuk.de>
 
 	* modules/pam_unix/passverify.c (verify_pwd_hash): Adjust debug
